Bump java version